# QuadTrans

./: B+ tree.h  B+_display.cpp  B+_insertion.cpp  B+_search.cpp  Box.h  CMakeLists.txt  DetectorState.cpp  DetectorState.h  JsonHelper.cpp  JsonHelper.h  Point.h  Quadtree.h  README.md  Vector2.h  main.cpp  utiFunc.cpp
